<?xml version="1.0"?>
<package format="3">
  <name>ik_solver_ros</name>
  <version>0.0.0</version>
  <description>The ik_solver_ros package</description>
  <maintainer email="nicola.pedrocchi@cnr.it">Nicola Pedrocchi</maintainer>

  <license>BSD-3</license>
  <author email="nicola.pedrocchi@cnr.it">Nicola pedrocchi</author>


  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <!-- TODO <buildtool_depend condition="$ROS_VERSION == 2">cmake</buildtool_depend> -->

  <build_depend>eigen</build_depend>
  <build_depend>ik_solver_core</build_depend>
  <build_depend>ik_solver_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>

  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>ik_solver_core</build_export_depend>
  <build_export_depend>ik_solver_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  
  <exec_depend>eigen</exec_depend>
  <exec_depend>ik_solver_core</exec_depend>
  <exec_depend>ik_solver_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <!-- TODO <build_type condition="$ROS_VERSION == 2">cmake</build_type> -->
  </export>
  
</package>
